script/firewall.conf
# Generated by iptables-save v1.6.0 on Sun Oct 16 17:44:28 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j LOG
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i ens3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A INPUT -i ens3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A INPUT -i ens3 -p udp -m state --state NEW -m udp --dport 1194 -j LOG
-A INPUT -i ens3 -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT
-A INPUT -i ens3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A INPUT -i ens3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j LOG
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 8.8.8.8/32 -i ens3 -o ens3 -p udp -m state --state NEW -m udp --dport 53 -j LOG
-A FORWARD -d 8.8.8.8/32 -i ens3 -o ens3 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A FORWARD -i ens3 -o ens3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A FORWARD -i ens3 -o ens3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A FORWARD -i ens3 -o ens3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A FORWARD -i ens3 -o ens3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j LOG
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -o ens3 -p udp -m state --state NEW -m udp --dport 53 -j LOG
-A OUTPUT -d 8.8.8.8/32 -o ens3 -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 1194 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
-A OUTPUT -o ens3 -p udp -m state --state NEW -m udp --dport 1194 -j LOG
-A OUTPUT -o ens3 -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j LOG
-A OUTPUT -o ens3 -p tcp -m state --state NEW -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -j ACCEPT
COMMIT
# Completed on Sun Oct 16 17:44:28 2016
